# SDL-for-cocos2dx

./: CMakeLists.txt
orange/: CMakelists.txt  GameBody.h  Header.h  HelloWorld.cpp  OGAction.cpp  OGAction.h  OGActionManager.cpp  OGActionManager.h  OGAssertManager.h  OGAudioEngine.cpp  OGAudioEngine.h  OGAutoreleasePool.cpp  OGAutoreleasePool.h  OGDirector.cpp  OGDirector.h  OGEventDispatcher.cpp  OGEventDispatcher.h  OGFileUtils.cpp  OGFileUtils.h  OGFont.h  OGGeometry.cpp  OGGeometry.h  OGInput.h  OGJsonLayer.cpp  OGJsonLayer.h  OGJsonParser.cpp  OGJsonParser.h  OGJsonTiledMap.cpp  OGJsonTiledMap.h  OGKeyCode.h  OGMathBase.h  OGNode.cpp  OGNode.h  OGParticleExamples.cpp  OGParticleExamples.h  OGParticleSystem.cpp  OGParticleSystem.h  OGPlatformMacros.h  OGRandom.cpp  OGRandom.h  (+30 more)
test/: GameBody.cpp  HelloWorld.cpp  HelloWorld.h
unzip/: CMakeLists.txt  CMakeLists.txt.bak  crypt.h  ioapi.h  unzip.cpp  unzip.h
zlib-1.3.1/: CMakeLists.txt
